## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

pong_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

pong_pixmaps_DATA = \
	background.png\
	ball.png\
	raquette_p1.png\
	raquette_p2.png\
	screenshot.png

EXTRA_DIST = $(pong_pixmaps_DATA)
