## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = pong

pong_SOURCES = \
	balle.cc\
	balle.h\
	error.h\
	espace.cc\
	espace.h\
	main.cc\
	main.h\
	partie.cc\
	partie.h\
	random-singleton.cc\
	random-singleton.h\
	raquette.cc\
	raquette.h

pong_LDFLAGS = 

pong_LDADD = \
	 -lSDL_image

